# interview-icebraker

./: .gitignore  .readthedocs.yaml  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: content_analysis.yml
amazon_web_services/: index.html
cinder/: base.html  main.html  search-modal.html
cinder/css/: base.css  cinder.css
css/: cinder.min.css
devops/: index.html
docs/: amazon_web_services.md  coding.md  data_engineering.md  devops.md  index.md  index.rst  python.md  sql.md  theoretical.md
python/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/practical/: index.html
site/search/: search_index.json
site/theoretical/: index.html
sql/: index.html
utils/: document_analyzer.py
